Created `collectionBase` schema
